# openfang

./: Cargo.toml  Dockerfile  README.md
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: channel_bridge.rs  routes.rs  server.rs  webchat.rs
crates/openfang-api/static/: index_body.html
crates/openfang-api/static/css/: components.css
crates/openfang-api/static/js/: app.js
crates/openfang-api/static/js/pages/: drives.js
crates/openfang-channels/src/: bridge.rs
crates/openfang-cli/src/: main.rs
crates/openfang-cli/src/tui/screens/: init_wizard.rs
crates/openfang-drive/: Cargo.toml
crates/openfang-drive/src/: lib.rs  ocr.rs  repos.rs  search.rs  volume.rs
crates/openfang-drive/src/backend/: local.rs  mod.rs
crates/openfang-drive/src/classify/: llm.rs  mod.rs  rules.rs
crates/openfang-drive/src/index/: content.rs  metadata.rs  mod.rs
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: kernel.rs
crates/openfang-runtime/src/: kernel_handle.rs  prompt_builder.rs  tool_runner.rs
crates/openfang-types/src/: capability.rs  config.rs
docs/: cli-reference.md
